Fix voor references

--- a/book/basics/concrete/material_characteristics_concrete.ipynb
+++ b/book/basics/concrete/material_characteristics_concrete.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Material characteristics concrete\n",
     "\n",
-    "This paragraph contains tables containing the different material properties of the defined concrete introduction strength classes.\n",
+    "This paragraph contains tables containing the different material properties of the defined concrete introduction strength classes [^1].\n",
     "\n",
     "## Strenght and stiffness\n",
     "\n",
@@ -309,11 +309,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "[^1]: [Heidelbergcement.com](https://www.heidelbergcement.com/): General information on cement and concrete"
+   ]
   }
  ],
  "metadata": {
