--- a/book/basics/steel/hollow_sections.ipynb
+++ b/book/basics/steel/hollow_sections.ipynb
@@ -17,16 +17,7 @@
     "\n",
     "For ordinary structure, mostly welded hollow sections are used. By means of automated welding processes, these tubular sections are provided with a longitudinal or spiral weld. The ends of the hollow sections can be provided with the necessary connection provisions. \n",
     "\n",
-    "Using the current production techniques the structural engineer only needs to find the correct fabrication technique, structural shape, material quality, conservation and erection method to make a structural design.\n",
-    "\n",
-    "**Sources**\n",
-    " - Hollow sections in Structural Applications, J. Wardenier. \n",
-    " - ESDEP CD-ROM\n",
-    " - Bouwen met Staal CD-ROM\n",
-    "\n",
-    "```{note}\n",
-    "This section has been made with support of J. Wardenier, ESDEP and Bouwen met Staal.\n",
-    "```\n",
+    "Using the current production techniques the structural engineer only needs to find the correct fabrication technique, structural shape, material quality, conservation and erection method to make a structural design [^1].\n",
     "\n",
     "## Possible shapes\n",
     "Preferably, use the following abbreviations for the different hollow sections:  \n",
@@ -98,7 +89,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "[^1]: Hollow sections in Structural Applications, J. Wardenier."
+   ]
   }
  ],
  "metadata": {
