--- a/book/basics/steel/products_2_cold_rolled_sections.ipynb
+++ b/book/basics/steel/products_2_cold_rolled_sections.ipynb
@@ -20,7 +20,7 @@
     "| $CFU_{ue}$ | 10 - 160 | 10 - 160 | 10 - 70  |\n",
     "| $CFC$   | 25 - 100 | 25 - 100 | 25 - 50  |\n",
     "\n",
-    "Applications: Are used in residential buildings, carcase work, storage systems and finishings. Also used as purlins, or floorbeams. Due to plastic strains during fabrication the material properties differ from hot rolled sections.\n",
+    "Applications: Are used in residential buildings, carcase work, storage systems and finishings. Also used as purlins, or floorbeams. Due to plastic strains during fabrication the material properties differ from hot rolled sections [^1].\n",
     "\n",
     "## L and Z profiles\n",
     "```{figure} Images/L_and_Z_sections.png\n",
@@ -37,13 +37,16 @@
     "| $CFZ$  | 30 - 50   | 30 - 50  | 38 - 57  |\n",
     "\n",
     "\n",
-    "Applications: Are used in residential buildings, carcase work, storage systems and finishings. Also used as purlins, or floorbeams. Due to plastic strains during fabrication the material properties differ from hot rolled sections."
+    "Applications: Are used in residential buildings, carcase work, storage systems and finishings. Also used as purlins, or floorbeams. Due to plastic strains during fabrication the material properties differ from hot rolled sections [^2]."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "[^1]: [Corusconstruction](https://www.corusconstruction.com/) hot rolled and cold formed sections (blue book), composite slab floors, sheet piling, bolts, details, case studies.\n",
+    "[^2]: [Voetstalpine](https://www.voestalpine.com/sadef/en/SEO/cold-formed-profiles) cold formed profiles."
+   ]
   }
  ],
  "metadata": {
