--- a/book/basics/timber/material_characteristics.ipynb
+++ b/book/basics/timber/material_characteristics.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "## Durability class\n",
     "\n",
-    "The upper table below can be used to judge whether wood species belonging to a particular durability class (D1-D5) is sufficiently durable or needs extra protection. The durability class of different wood species is depicted in the lower table below. The higher the durability class, the less durable a wood species.\n",
+    "The upper table below can be used to judge whether wood species belonging to a particular durability class (D1-D5) is sufficiently durable or needs extra protection. The durability class of different wood species is depicted in the lower table below. The higher the durability class, the less durable a wood species [^1].\n",
     "\n",
     "| Use class | D1 | D2 | D3       | D4 | D5 |\n",
     "|----|----|----|----------|----|----|\n",
@@ -185,7 +185,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "[^1]: [houtdatabase.nl](https://www.houtdatabase.nl/) durability properties of timber species"
+   ]
   }
  ],
  "metadata": {
