--- a/book/basics/timber/products.ipynb
+++ b/book/basics/timber/products.ipynb
@@ -28,7 +28,7 @@
     "The roof of the entrance of the  \n",
     "‘Efteling’ consists almost entirely of roundwood.\n",
     "```\n",
-    "Applications: Roundwood is used for a wide range of structures such as bridges, towers, buildings and foundation piles. In modern architecture roundwood can for example be found in the columns of the MVRDV expo building.\n",
+    "Applications: Roundwood is used for a wide range of structures such as bridges, towers, buildings and foundation piles. In modern architecture roundwood can for example be found in the columns of the MVRDV expo building [^1].\n",
     "\n",
     "## Solid wood (sawn sections)\n",
     "```{figure} Images/solidwood.png\n",
@@ -36,7 +36,7 @@
     "---\n",
     "Solid wood\n",
     "```\n",
-    "Applications: Solid wood can be used for small structures, roofs, purlins, floors (both beams and purlins), and trusses.\n",
+    "Applications: Solid wood can be used for small structures, roofs, purlins, floors (both beams and purlins), and trusses [^2].\n",
     "\n",
     "## Glue laminated timber\n",
     "\n",
@@ -60,13 +60,18 @@
     "Roof beams made of glued  \n",
     "laminated timber.\n",
     "```\n",
-    "Applications: Glued laminated timber is used frequently because of the many possible shapes and lengths. However, the length of elements can be restricted by transport. Large spans, three hinged frames, trusses, arches and frames are also possible with glued laminated timber"
+    "Applications: Glued laminated timber is used frequently because of the many possible shapes and lengths. However, the length of elements can be restricted by transport. Large spans, three hinged frames, trusses, arches and frames are also possible with glued laminated timber [^3][^4]. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "[^1]: [Centrum Hout](https://www.centrumhout.nl/) buildings, bridges, other structures, photos, ideas.\n",
+    "[^2]: Holzbau Atlas, J. Natterer, T. Herzog, M. Volz: buildings, photos, drawings, connections.\n",
+    "[^3]: STEP 1, 2 Timber Engineering, Centrum Hout: calculation methods for timber structures.\n",
+    "[^4]: Timber Construction Manual, Brikhäuser: examples of timber structres and connections."
+   ]
   }
  ],
  "metadata": {
