--- a/book/design/concrete/bridge_beams.ipynb
+++ b/book/design/concrete/bridge_beams.ipynb
@@ -12,19 +12,12 @@
    "metadata": {},
    "source": [
     "Different fabricators offer prefabricated bridge beams. The beams are available in different shapes: box beams, I-sections and inverted\n",
-    "T-sections. This section gives an overview of some possibilities.\n",
+    "T-sections. This section gives an overview of some possibilities [^1][^2].\n",
     "\n",
     "```{figure} Images/Bridge_Beams1.jpg\n",
     "```  \n",
     "\n",
     "```{figure} Images/Bridge_Beams2.jpg\n",
-    "```     \n",
-    "\n",
-    "```{note}\n",
-    "www.haitsma.nl\n",
-    "www.spanbeton.nl\n",
-    "\n",
-    "Translated from Cement 2002 nr. 6\n",
     "```\n",
     "\n",
     "## Applications\n",
@@ -67,7 +60,6 @@
     "\n",
     "## Bridge beams I\n",
     "\n",
-
     "```{figure} Images/Railbeam_Structures.jpg\n",
     "\n",
     "Railbeam structures\n",
@@ -99,6 +91,14 @@
     "\n",
     "HKO profile\n",
     "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[^1]: [Haitsma.nl](https://www.haitsma.nl/): Bridges, foundations, offices, parking lots. CAD details and design graphs.\n",
+    "[^2]: [Spanbeton.nl](https://www.spanbeton.nl/): Large prefab elements used in road- and railway construction, hydraulic engineering, industrial buildings, and concrete sheet piling."
    ]
   }
  ],
