--- a/book/design/concrete/hollow_core_slabs.ipynb
+++ b/book/design/concrete/hollow_core_slabs.ipynb
@@ -14,7 +14,7 @@
     "Hollow core slabs are prefabricated floor elements. The hollow plates are prestressed and arrive on site fully\n",
     "prefabricated. The hollow cores save a considerable amount of weight compared to the massive slab floor.\n",
     "The savings can be as much as 50%. This means that also the main bearing structure and foundation can be made\n",
-    "considerably lighter.   \n",
+    "considerably lighter [^1][^2].   \n",
     "\n",
     "The floor concept is based on the following principles:\n",
     "- No voids.\n",
@@ -30,13 +30,8 @@
     "\n",
     "```{figure} Images/HollowCore2.jpg\n",
     "\n",
-    "Hollow core example.\n",
+    "Hollow core example [^1][^2].\n",
     "```  \n",
-    "\n",
-    "```{note}\n",
-    "www.vbi.nl\n",
-    "www.dycore.nl\n",
-    "```\n",
     "\n",
     "```{note} Sources\n",
     "Handbook VBI floors\n",
@@ -228,7 +223,10 @@
     "### Connections (All types of hollow core slabs)\n",
     "\n",
     "```{figure} Images/Integrated_Beams.jpg\n",
-    "```"
+    "```\n",
+    "\n",
+    "[^1]: [VBI.nl](https://www.vbi.nl/): Hollow core slabs and system floors.\n",
+    "[^2]: [Dycore.nl](https://www.dycore.nl/): Different floor systems. CAD drawings and details can be downloaded. Design graphs are available."
    ]
   }
  ],
