--- a/book/design/concrete/precast_concrete_planks.ipynb
+++ b/book/design/concrete/precast_concrete_planks.ipynb
@@ -19,15 +19,7 @@
     "bottom and top reinforcement can be placed. The topping is of strength class C20/25 or higher. Voids can\n",
     "be added in the fabrication process, and ground floors can be isolated at the bottom side of the slab. Propping\n",
     "needs to be done according to the fabricators instructions. Eventually the precast planks and topping act as one\n",
-    "slab which has a reasonable degree of flexibility.\n",
-    "\n",
-    "```{note}\n",
-    "www.dycore.nl\n",
-    "```\n",
-    "\n",
-    "```{note} Sources\n",
-    "Product information: Dycore precast concrete planks. The information on precast planks was written in cooperation with Dycore.\n",
-    "```\n",
+    "slab which has a reasonable degree of flexibility [^1].\n",
     "\n",
     "```{figure} Images/PrecastConcrete_Planks.jpg\n",
     "```  \n",
@@ -55,6 +47,13 @@
     "\n",
     "```{figure} Images/Dycore_Precast2.jpg\n",
     "``` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[^1]: [Dycore.nl](https://www.dycore.nl/): Different floor systems. CAD drawings and details can be downloaded. Design graphs are available."
    ]
   }
  ],
