--- a/book/design/foundations/design_guide.ipynb
+++ b/book/design/foundations/design_guide.ipynb
@@ -7,7 +7,7 @@
     "# Design guide\n",
     "\n",
     "The design guide contains several important issues for foundation design. Before starting the design, first information needs to be obtained. Of course the local soil conditions are necessary, but also the general layout of the structure needs to be known. With this information a sensible choice can be made of the different foundation methods. Finally a design calculation and strength check need to be made. This calculation is not always in the scope of the courses using this document. Mostly only the \n",
-    "general design and foundation method are important.\n",
+    "general design and foundation method are important. Most information is taken from Vroom [^1] and Walinco [^2].\n",
     "\n",
     "```{figure} Images/foundations.png\n",
     "---\n",
@@ -35,7 +35,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "[^1]: [vroom.nl](https://vroom.nl/en/products/cast-in-situ-piles/): detailed information on: Prefab piles, Wood piles, Steel pipe piles, Vibro-piles, Vibro-combi-piles, Concrete screw piles, DPA piles, and Tubular screw piles.\n",
+    "[^2]: [walinco.nl](https://www.walinco.nl/): special foundation methods with clear explanation, photos and videos. "
+   ]
   }
  ],
  "metadata": {
