--- a/book/design/foundations/foundation_methods_1.ipynb
+++ b/book/design/foundations/foundation_methods_1.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "## Considerations\n",
     "\n",
+    "Most information is taken from Vroom [^1] and Walinco [^2].\n",
+    "\n",
     "### Settlements\n",
     "Settlements of a slab foundation are only comparable to settlements of a pile foundation (around 5 mm) if below the foundation depth only sand layers occur. If this is the \n",
     "case, a bearing capacity of 50 kN/m2 may be assumed. A calculation is unnecessary. Greater bearing capacities are possible but must always be verified with a calculation. \n",
@@ -25,6 +27,14 @@
     "\n",
     "### Explanation\n",
     "A slab foundation must always reach to a frost-free depth. In practice this means a depth of at least 0,8 m below ground level.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[^1]: [vroom.nl](https://vroom.nl/en/products/cast-in-situ-piles/): detailed information on: Prefab piles, Wood piles, Steel pipe piles, Vibro-piles, Vibro-combi-piles, Concrete screw piles, DPA piles, and Tubular screw piles.\n",
+    "[^2]: [walinco.nl](https://www.walinco.nl/): special foundation methods with clear explanation, photos and videos. "
    ]
   }
  ],
