--- a/book/design/foundations/tables.ipynb
+++ b/book/design/foundations/tables.ipynb
@@ -19,7 +19,7 @@
     "```\n",
     "\n",
     "```{warning}\n",
-    "Indication of the design value of the maximum bearing capacity based on the pile cross section. Note that local soil conditions always need to be taken into account to accurately calculate the maximum bearing capacity.\n",
+    "Indication of the design value of the maximum bearing capacity based on the pile cross section. Note that local soil conditions always need to be taken into account to accurately calculate the maximum bearing capacity. Most information is taken from Vroom [^1] and Walinco [^2].\n",
     "```\n",
     "\n"
    ]
@@ -27,7 +27,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "[^1]: [vroom.nl](https://vroom.nl/en/products/cast-in-situ-piles/): detailed information on: Prefab piles, Wood piles, Steel pipe piles, Vibro-piles, Vibro-combi-piles, Concrete screw piles, DPA piles, and Tubular screw piles.\n",
+    "[^2]: [walinco.nl](https://www.walinco.nl/): special foundation methods with clear explanation, photos and videos. "
+   ]
   }
  ],
  "metadata": {
