lay out changes, added cell tags steel / concrete

--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -16,8 +16,10 @@
     "Schematic load-bearing floor plan, first floor office building.\n",
     "```\n",
     "\n",
-    "```{note} Steel\n",
+    "```{note}\n",
     "For the steel structure, we apply an HEA section with strength class S235. This means that the calculation value for the steel strength is equal to 235 N/mm². For steel, the modulus of elasticity E for all strength classes equals to 210 × 10³ N/mm².\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
     "```\n",
     "\n",
     "A HEA section features wide flanges, providing ample bearing width for the channel plates. Using the estimation rule, we estimate the height of a profile and note down the profile number and the data required for the verification calculation. These include: the weight of the beam per linear meter, the resistance moment $W_y$, and the quadratic area moment $I_y$.\n",
@@ -25,33 +27,46 @@
     "This information can be found in a steel profile table or through the Steel Profiles app by Building with Steel. Often, the table provides the mass per linear meter [kg/m]. This needs to be converted to weight per linear meter [kN/m]. To do this, we multiply the displayed number by 10 (rounding from 9.8: acceleration due to gravity in $m/s^2$) to convert from [kg] to [N], and then divide by 1000 (from N to kN). [N.B.: Integrated beams (joists) are often used with channel plates to reduce the construction height.]\n",
     "\n",
     "```{note}\n",
-    "The beam has a length of 6 meters. According to the estimation rule, the estimated beam height is then $1/20 × 6000 = 300 [mm]$. Based on this, we choose a HE320A profile. We note down the data of this profile. The weight (mass) per linear meter is given in kg. This needs to be converted to kN: $99.5 kg/m$ → $0.01 × 99.5 ≈ 0.10 [kN/m]$.\n",
+    "The beam has a length of 6 meters. According to the estimation rule, the estimated beam height is then:  \n",
+    "$1/20 × 6000 = 300 \\ [mm]$  \n",
+    "Based on this, we choose a HE320A profile. We note down the data of this profile. The weight (mass) per linear meter is given in kg. This needs to be converted to kN:  \n",
+    "$99.5 \\ [kg/m]$ → $0.01 × 99.5 ≈ 0.10 \\ [kN/m]$.\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
     "```\n",
     "\n",
     "The image below is a screenshot of the Steel Profiles app. This app is free to install on your phone and provides an overview of available steel profiles and their properties.\n",
     "\n",
     "```{figure} Images/HEA_320.jpg\n",
+    "---\n",
+    "width: 400px\n",
+    "---\n",
     "```\n",
     "\n",
-    "For concrete and wooden beams, the weight per linear meter is not always provided. To determine that, we need to multiply the cross-sectional area ($b$ × $h$; $[m²]$) by the density $ρ [kg/m³]$, and then multiply the result by the acceleration due to gravity $[m/s²]$. For concrete, the density is $2400 [kg/m³]$, for reinforced concrete $2500 [kg/m³]$, and for softwood approximately $300$ to $400 [kg/m³]$ (depending on the strength class). The weight per linear meter becomes:\n",
-    "$g = b × h × ρ × 10 / 1000 [kN/m]$ (here $b$ and $h$ in meters!)\n",
+    "For concrete and wooden beams, the weight per linear meter is not always provided. To determine that, we need to multiply the cross-sectional area ($b$ × $h \\ [m²]$) by the density $ρ \\ [kg/m³]$, and then multiply the result by the acceleration due to gravity $[m/s²]$. For concrete, the density is $2400 \\ [kg/m³]$, for reinforced concrete $2500 \\ [kg/m³]$, and for softwood approximately $300$ to $400 \\ [kg/m³]$ (depending on the strength class). The weight per linear meter becomes:\n",
+    "$g = b × h × ρ × \\frac{10}{1000} \\ [kN/m]$ (here $b$ and $h$ in meters!)\n",
     "\n",
     "For a rectangular cross-section, we can easily calculate the resistance moment $W$ and the quadratic area moment $I$.\n",
-    "$I = (1 / 12) × b × h³ [mm⁴]$\n",
-    "$W = I / (0.5h) = (1 / 6) × b × h² [mm³]$\n",
+    "$I = \\frac{1}{12} × b × h³ \\ [mm⁴]$  \n",
+    "$W = \\frac{I}{\\frac{1}{2} h} = \\frac{1}{6} × b × h² \\ [mm³]$\n",
     "\n",
-    "```{note} Concrete\n",
-    "For the concrete structure, we use an in-situ cast, non-prestressed concrete beam. We choose strength class C30/37. According to the estimation rule, the height h would be equal to 6000/10 = 600 [mm]. For the corresponding width, we choose half the height (estimation rule): 600/2 = 300 [mm]. The weight per linear meter is then:\n",
+    "```{note}\n",
+    "For the concrete structure, we use an in-situ cast, non-prestressed concrete beam. We choose strength class C30/37. According to the estimation rule, the height h would be equal to $\\frac{6000}{10} = 600 \\ [mm]$. For the corresponding width, we choose half the height (estimation rule): $\\frac{600}{2} = 300 \\ [mm]$. The weight per linear meter is then:  \n",
     "0.3 [m] × 0.6 [m] × 2500 [kg/m³] × 10 [m/s²] / 1000 = 4.5 [kN/m]\n",
-    "We can calculate $I$ and $W$ using the above formulas.\n",
-    "$I_y = (1 / 12) × 300 [mm] × 600 [mm³] = 5.40 × 10⁹ [mm⁴]\n",
-    "$W_y = I_y / (0.5h) = (1 / 6) × 300 [mm] × 600 [mm²] = 18.0 × 10⁶ [mm³]\n",
+    "\n",
+    "We can calculate $I$ and $W$ using the above formulas.  \n",
+    "$I_y = \\frac{1}{12} × 300 [mm] × 600 [mm³] = 5.40 × 10⁹ \\ [mm⁴]$  \n",
+    "$W_y = \\frac{I}{\\frac{1}{2} h} = \\frac{1}{6} × 300 [mm] × 600 [mm²] = 18.0 × 10⁶ \\ [mm³]$\n",
     "\n",
     "The values for strength and modulus of elasticity can be obtained from the concrete tables in the Material Properties Concrete section. It is advisable to neatly organize the beam data, for example, in a table as shown below.\n",
     "\n",
-    "| h_{floorbeam} | Profile [mm²] | Weight [N/mm] | W_y [mm³] | I_y [mm⁴] | Strength class | Strength [N/mm²] | E_{cm} [N/mm²] |\n",
+    "| Height $h_{floorbeam} \\ [mm]$ | Area $A \\ [mm²]$ | Weight $q_G \\ [N/mm]$ | Section modulus $W_y \\ [mm³]$ | Moment of inertia $I_y \\ [mm⁴]$ | Strength class $[-]$ | Strength $f_{cd} \\ [N/mm²]$ | Youngs modulus $E_{cm} \\ [N/mm²]$ |\n",
     "|----------------|---------------|---------------|-----------|-----------|----------------|------------------|----------------|\n",
-    "| 600            | 600x300       | 4.5           | 18.0 × 10⁶|5.40 × 10⁹ |         C30/37 |         20 × 10³ |       33 × 10³ |\n"
+    "| 600            | 600x300       | 4.5           | 18.0 × 10⁶|5.40 × 10⁹ |         C30/37 |         20 × 10³ |       33 × 10³ |\n",
+    "\n",
+    "+++\n",
+    "{bdg-secondary}`Concrete`\n",
+    "```"
    ]
   },
   {
@@ -69,12 +84,16 @@
     "\n",
     "$q_{eg}$ and $q_{rb}$ together form the permanent load $q_G$. The imposed load $q_{ob}$ is the variable load $q_Q$. For beam verification, the loads must be calculated per linear meter on the beam, unless the load is applied as a point load on the beam. We assume a uniformly distributed load.\n",
     "\n",
-    "```{note} Steel\n",
+    "```{note}\n",
     "The weight per linear meter of the beam (beam 3B-3D on the load-bearing floor plan) has already been determined while collecting the beam data: $q_{eg} = 0.98 [kN/m]$.\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
     "```\n",
     "\n",
     "```{note} Concrete\n",
     "The weight of the concrete beam has also already been calculated: $q_{eg}$ = 4.5 [kN/m].\n",
+    "+++\n",
+    "{bdg-secondary}`Concrete`\n",
     "```\n",
     "\n",
     "```{note} Static load\n",
@@ -120,23 +139,29 @@
     "```{figure} Images/Schematic_Load-Bearing_Floor_Plan_Loads.jpg\n",
     "```\n",
     "\n",
-    "```{note} Steel\n",
+    "```{note}\n",
     "For a steel beam with a center-to-center distance of 8 meters:\n",
     "$q_{rb} = \\frac{8}{2} + \\frac{8}{2} \\times 4.9 [kN/m^2] = 39.2 [kN/m]$\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
     "```\n",
     "\n",
     "```{note} Concrete\n",
     "For a concrete beam, the resting load on that beam is obviously the same as that on the steel beam:\n",
     "$q_{rb}= 39.2 [kN/m]$.\n",
+    "+++\n",
+    "{bdg-secondary}`Concrete`\n",
     "```\n",
     "\n",
     "```{note} Static load\n",
     "The imposed load for each function is prescribed in the Eurocodes. The building has an office function. The corresponding imposed load is $3 [kN/m^2]$. This load is given in [kN/m^2]. To make this a load per running metre of girder, it should also be multiplied by two times half the centre-to-centre distance. \n",
     "```\n",
     "\n",
-    "```{note} Steel\n",
+    "```{note}\n",
     "For the imposed load on the steel beam, the following applies:\n",
     "$q_Q = q_{ob} = (\\frac{8}{2} + \\frac{8}{2}) \\cdot 3 [kN/m^2] = 24 [kN/m]$\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
     "```"
    ]
   },
@@ -167,7 +192,7 @@
     "\n",
     "$W_{required} = U.C. \\cdot W_{old}$\n",
     "\n",
-    "```{note} Steel\n",
+    "```{note}\n",
     "For the steel beam, the design value of the load for the ULS check is:\n",
     "\n",
     "$q_{ULS} = 1.2 \\cdot (0.98 [kN/m] + 39.2 [kN/m]) + 1.5 \\cdot 24 [kN/m] = 84.2 [kN/m]$\n",
@@ -190,9 +215,11 @@
     "In the steel profiles App, we see that this corresponds to an HE340A with $g = 1.05 [kN/m]$, $W = 1678 \\cdot 10^3 [mm^3]$, and $I = 27693 \\cdot 10^4 [mm^4]$.\n",
     "\n",
     "If we want to limit the construction height, we can also choose an HEB profile (HE300B) or a higher strength class (S355; see BGT check).\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
     "```\n",
     "\n",
-    "```{note} Concrete\n",
+    "```{note}\n",
     "For the concrete beam, the same steps:\n",
     "\n",
     "$q_{ULS} = 1.2 \\cdot (4.5 [kN/m] + 39.2 [kN/m]) + 1.5 \\cdot 24 [kN/m] = 88.4 [kN/m]$\n",
@@ -212,6 +239,8 @@
     "$g = 4.73 [kN/m]$, $W = 19.85 \\cdot 10^6 [mm^3]$, and $I = 6251.2 \\cdot 10^6 [mm^4]$.\n",
     "\n",
     "If we want to limit the construction height, we can choose (prefabricated) concrete with a higher strength class. C35/45 with an $f_{m;d} = f_{c;d} = 23.3 [N/mm^2]$. For this strength class, the beam $600 \\cdot 300 [mm^2]$ will comply.\n",
+    "+++\n",
+    "{bdg-secondary}`Concrete`\n",
     "```"
    ]
   },
@@ -291,7 +320,7 @@
     "A roof terrace must be considered as a floor!\n",
     "```\n",
     "\n",
-    "```{note} Steel\n",
+    "```{note}\n",
     "For the deflection of the steel beam, the additional deflection is determined by the variable load only. All necessary data have already been determined.\n",
     "\n",
     "$w_Q = \\dfrac{5}{384} \\cdot \\dfrac{q_Q \\cdot l^4}{E \\cdot I_y} = \\dfrac{5}{384} \\cdot \\dfrac{24 [kN/m] \\cdot 6000 [mm^4]}{210 \\cdot 10^3 [N/mm^2] \\cdot 27690 \\cdot 10^4 [mm^4]} = 7.0 [mm]$\n",
@@ -313,9 +342,11 @@
     "$W_y = U.C. \\cdot W_{y,oud} = 0.7 \\cdot 1479 \\cdot 10^3 [mm^3] = 1035 \\cdot 10^3 [mm^3]$\n",
     "\n",
     "A HE300A strength class S355 meets both requirements and will be used. This profile has a weight of 0.88 [kN/m].\n",
+    "+++\n",
+    "{bdg-primary}`Steel`\n",
     "```\n",
     "\n",
-    "```{note} Concrete\n",
+    "```{note}\n",
     "For a concrete beam, we must account for creep (and a cracked cross-section). Here, \\textbf{k=3} and for an office, $\\psi_2 = 0.3$. For concrete strength class C30/37, $E_{c,m} = 33000 [N/mm^2]$. The deflection due to the permanent load is:\n",
     "\n",
     "$w_G = \\frac{5}{384} \\cdot \\dfrac{q_G \\cdot l^4}{E_{cm} \\cdot I_y} = \\frac{5}{384} \\cdot \\dfrac{(4.73 [kN/m] + 39.2 [kN/m]) \\cdot 6000 [mm^4]}{33000 N[/mm^2] \\cdot 6251.2 \\cdot 10^6 [mm^4]} = 3.6 [mm]$\n",
@@ -332,11 +363,13 @@
     "\n",
     "$w_{inf,req} = 0.003 \\cdot l = 0.003 \\cdot 6000 [mm] = 18 [mm]$\n",
     "\n",
-    "$U.C. = \\dfrac{w_{inf}{w_{inf,req}} = \\dfrac{14.6 mm}{18 mm} = 0.81 \\leq 1}$\n",
+    "$U.C. = \\dfrac{w_{inf}}{w_{inf,req}} = \\dfrac{14.6 mm}{18 mm} = 0.81 \\leq 1$\n",
     "\n",
     "The beam amply meets the deflection requirement, so we see that strength is the governing factor. With strength class C35/45, a beam $b \\cdot h = 300 \\cdot 600 [mm^2]$ meets the requirement. Usually, the cross-sectional dimensions are rounded to multiples of 50 mm. Therefore, we choose the beam with strength class C35/45. This beam has a weight:\n",
     "\n",
     "$0.3 [m] \\cdot 0.6 [m] \\cdot 25 [kN/m^3] = 4.5 [kN/m]$\n",
+    "+++\n",
+    "{bdg-secondary}`Concrete`\n",
     "```"
    ]
   }
