correct image references

--- a/book/calculation_examples/concrete/cantilever_beam.ipynb
+++ b/book/calculation_examples/concrete/cantilever_beam.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "The cantilevered beam must then be checked for strength and stiffness. To do this, we collect the beam data and determine the load on the beam.\n",
     "\n",
-    "```{figure} Iamges/Cantilever_Beam.jpg\n",
+    "```{figure} Images/Cantilever_Beam.jpg\n",
     "```\n",
     "\n",
     "The load on the beam consists of three parts:\n",
@@ -98,7 +98,7 @@
     "```{figure} Images/Schematic_Load_Bearing_Floor_Plan_Cantilever_Beam.jpg\n",
     "```\n",
     "\n",
-    "```{note} Steel\n",
+    "```{note}\n",
     "We assume a steel frame. For the beam profile, we use both estimation rules.\n",
     "\n",
     "- $h_{ligger}=\\frac{1}{20} \\cdot l_{ov}=\\frac{1}{20} \\cdot 6000 [mm] = 300 [mm]$\n",
@@ -108,6 +108,9 @@
     "We choose a profile based on the largest of the found sizes: an HE320A profile. We can look up the profile data in the Steel Profiles App:\n",
     "\n",
     "```{figure} Images/HEA_320.jpg\n",
+    "---\n",
+    "width: 300px\n",
+    "---\n",
     "```\n",
     "\n",
     "The resting load consists of the weight of the channel plates, the finishing layer, and the ceiling with pipes. The required channel plate has a thickness of 200 mm and a weight of $3.1 [kN/m^2]$. The 50 mm thick topping layer weighs $1.2 [kN/m^2]$, and for the ceiling and pipes, $0.6 [kN/m^2]$ is considered. Together, this gives a resting load of:\n",
@@ -125,7 +128,6 @@
     "The total permanent load becomes:\n",
     "\n",
     "$0.98 [kN/m] + 39.2 [kN/m] = 40.2 [kN/m]$\n",
-    "```\n",
     "\n",
     "With this data, we will check the beam for strength and stiffness. First, we consider the beam section between the supports and then the cantilever. In both calculations, the permanent load is present everywhere. However, different partial factors apply, depending on whether the load is favorable or unfavorable.\n",
     "\n",
@@ -199,7 +201,7 @@
     "\n",
     "The support moment at B is solely determined by the load on the cantilever, not the load on beam section A-B. The maximum moment occurs when the cantilever is extremely loaded, by both the permanent and variable loads. Here too, we can determine the partial factors, where those for beam section A-B are not applicable.\n",
     "\n",
-    "```{figure} Iamges/Cantilever_Beam_Loads2.jpg\n",
+    "```{figure} Images/Cantilever_Beam_Loads2.jpg\n",
     "```\n",
     "\n",
     "Partial factors for Ultimate Limit State of Cantilevered Beam (Safety Class 2)\n",
