--- a/book/calculation_examples/concrete/column.ipynb
+++ b/book/calculation_examples/concrete/column.ipynb
@@ -31,14 +31,13 @@
     "For simplicity, we assume that the permanent load of the roof is equal to that of the floors. The roof beams are the same as those in the floor. Depending on the roof covering, the difference will not be significant. According to the Eurocode, for a roof not used as a terrace, an imposed load of $1 [kN/m^2]$ should be taken for every $10 [m^2]$ of roof area. For the entire roof, a lower imposed load can be considered. However, we choose an imposed load of $1 [kN/m^2]$. This also provides the option for installing solar panels (PV panels) or adding a light sedum planting. It is advisable to consistently record the data found for clarity. The table below summarises the loads.\n",
     "\n",
     "|                    | Opgelegde belasting | Opgelegde belasting | Rustende belasting | Rustende belasting | Gewicht ligger  | Gewicht ligger |\n",
+    "|--------------------|---------------------|---------------------|--------------------|--------------------|-----------------|----------------|\n",
     "|                    | vloer               | dak                 | vloer              | dak                | vloer           | dak            |\n",
     "|                    | [kN/m^2]            | [kN/m^2]            | [kN/m^2]           | [kN/m^2]           | [kN/m]          | [kN/m]         |\n",
-    "|--------------------|---------------------|---------------------|--------------------|--------------------|-----------------|----------------|\n",
     "|   staalskelet      | 3                   | 1                   | 4.9                | 4.9                | 0.88            | 0.88           |\n",
     "|   betonskelet      | 3                   | 1                   | 4.9                | 4.9                | 4.5             | 4.5            |\n",
     "\n",
-    "\n",
-    "```{note} Steel\n",
+    "````{note}\n",
     "The steel structure uses HEA profiles for the columns. The most heavily loaded column is the central column on the ground floor.\n",
     "\n",
     "Using the estimation rules, we roughly determine the dimensions the column should have.\n",
@@ -46,10 +45,13 @@
     "In the Steel Profiles App, we search for the corresponding profile and note down the details.\n",
     "\n",
     "```{figure} Images/HEA_320.jpg\n",
+    "---\n",
+    "width: 400px\n",
+    "---\n",
     "```\n",
-    "```\n",
+    "````\n",
     "\n",
-    "```{note} Concrete\n",
+    "```{note}\n",
     "For a concrete column, we also need to gather the data. The most common choice is a square column. Using the estimation rule, we obtain a column: $3600 / 10 = 360 [mm]$. The weight of the column is thus \n",
     "\n",
     "$0.36 [m] × 0.36 [m] × 25 [kN/m^3] = 3.24 [kN/m]$. \n",
@@ -86,10 +88,10 @@
     "$\\gamma_{G}$ and $\\gamma_{Q}$ are the (partial) safety factors.\n",
     "\n",
     "\n",
-    "```{figure} Imamge/Table_Steel_Construction.jpg\n",
+    "```{figure} Images/Table_Steel_Construction.jpg\n",
     "```\n",
     "\n",
-    "```{figure} Image/Table_Concrete_Construction.jpg\n",
+    "```{figure} Images/Table_Concrete_Construction.jpg\n",
     "```\n"
    ]
   },
@@ -170,7 +172,7 @@
     "\n",
     "$l_{cr}$ is the buckling length. In a braced building with hinge connections between columns and beams, the buckling length of the column is equal to the floor height.\n",
     "\n",
-    "```{figure} Images/Buckling.jpg\n",
+    "```{figure} Images/Buckling_Column.jpg\n",
     "```\n",
     "\n",
     "```{note} Steel\n",
@@ -202,7 +204,7 @@
     "\n",
     "$I_{z,required}=U.C.\\cdot I_z=0.32 \\cdot 1400 \\cdot 10^6 [mm^4] = 444 \\cdot 10^6  [mm^4]$.\n",
     "\n",
-    "In the stress check, we found a column of $300 \\cdot 300 [mm^2]}$. The quadratic surface moment at this cross-section is:\n",
+    "In the stress check, we found a column of $300 \\cdot 300 [mm^2]$. The quadratic surface moment at this cross-section is:\n",
     "\n",
     "$I_z=\\frac{1}{12} \\cdot 300 [mm] \\cdot (300 [mm])^3=675 \\cdot 10^6 [mm^4]$\n",
     "\n",
