--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -127,7 +127,7 @@
     "\n",
     "So, the total permanent load of the floor is $3.1 [kN/m²] + 1.2 [kN/m²] + 0.6 [kN/m²] = 4.9 [kN/m²]$.\n",
     "\n",
-    "```{figure} Images/Load_Bearing_Floor_Plan_Loads.jpg\n",
+    "```{figure} Images/Load-Bearing_Floor_Plan_Loads.jpg\n",
     "```\n",
     "\n",
     "The found load per square meter [kN/m^2] needs to be converted to a distributed load on the beam, or rather a load per linear meter of beam [kN/m]. To determine its magnitude, we use the schematic load-bearing floor plan. On the beam, we mark a distance of 1 meter and shade the area supported by this meter of the beam. The size of this area is equal to two times the half center-to-center distance of the beams times 1 meter.\n",
@@ -184,7 +184,7 @@
     "\n",
     "For the Ultimate Limit State (ULS), we need to apply the so-called Fundamental Load Combination. The loads must be multiplied by a partial factor $\\gamma_{f}$ (formerly known as load or safety factors) to ensure additional safety. These factors depend on the consequence class of the building and the nature of the load. $\\gamma_{G}$ and $\\gamma_{Q}$ are the partial factors for the permanent load and the variable load, respectively.\n",
     "\n",
-    "According to Eurocode 1990, the permanent load may be reduced by a reduction factor $ξ$. This is set at 0.89 in the National Annex to the Eurocode. For most buildings (including offices), $\\gamma_{G} is 1.35 and $\\gamma_{Q}$ is 1.5. The partial factor for the permanent load is multiplied by the reduction factor: $0.89 × 1.35 = 1.2$ (the value of the former load factor for the permanent load). We will use this value as the partial factor for the permanent load. Therefore, for the office building: $q_{ULS} = 1.2 \\cdot q_G + 1.5 \\cdot q_Q$. With these quantities, we can calculate the moment and thus the bending stress, and then check the strength by performing the unity check (U.C.):\n",
+    "According to Eurocode 1990, the permanent load may be reduced by a reduction factor $ξ$. This is set at 0.89 in the National Annex to the Eurocode. For most buildings (including offices), $\\gamma_{G}$ is 1.35 and $\\gamma_{Q}$ is 1.5. The partial factor for the permanent load is multiplied by the reduction factor: $0.89 × 1.35 = 1.2$ (the value of the former load factor for the permanent load). We will use this value as the partial factor for the permanent load. Therefore, for the office building: $q_{ULS} = 1.2 \\cdot q_G + 1.5 \\cdot q_Q$. With these quantities, we can calculate the moment and thus the bending stress, and then check the strength by performing the unity check (U.C.):\n",
     "\n",
     "$U.C. = /frac{\\sigma_{m,d}}{f_{m,d}} <= 1.0$\n",
     "\n",
