more images referenced correctly

--- a/book/calculation_examples/concrete/cantilever_beam.ipynb
+++ b/book/calculation_examples/concrete/cantilever_beam.ipynb
@@ -19,7 +19,10 @@
     "\n",
     "The cantilevered beam must then be checked for strength and stiffness. To do this, we collect the beam data and determine the load on the beam.\n",
     "\n",
-    "```{figure} Images/Cantilever_Beam.jpg\n",
+    "```{figure} Images/Cantilever_Beam_Loads.jpg\n",
+    "---\n",
+    "width: 400px\n",
+    "---\n",
     "```\n",
     "\n",
     "The load on the beam consists of three parts:\n",
@@ -36,6 +39,9 @@
     "2. The cantilevered part (B-D) that is considered to be clamped at the support.\n",
     "\n",
     "```{figure} Images/Cantilever_Beam_Splitted.jpg\n",
+    "---\n",
+    "width: 400px\n",
+    "---\n",
     "```\n",
     "\n",
     "This results in three loading cases. The cantilevered part does not have a true fixed support but what is called a flexible support. The load on the cantilevered part creates a moment at support B. This moment will cause the beam section A-B to deflect upwards. As a result, the beam section B-D undergoes an angular rotation. Therefore, the beam section A-B is subjected not only to the load on this beam section but also to a moment due to the load on the cantilever.\n",
@@ -63,6 +69,9 @@
     "This upward deflection is generally smaller than the deflection due to the variable load on the cantilever. Note that for the q-load in these formulas, different values for both $q_{UGT}$ and $q_{BGT}$ generally need to be used.\n",
     "\n",
     "```{figure} Images/Momentline_Cantilever_Beam.jpg\n",
+    "---\n",
+    "width: 400px\n",
+    "---\n",
     "```\n",
     "\n",
     "When examining the moment diagram for a distributed load $q$ on the beam, we see that the size of the support moment is entirely determined by the load on the cantilever. The moment diagram of beam section A-B is effectively pulled up at B from 0 to the value of the support moment due to the load on the cantilever.\n",
@@ -96,6 +105,9 @@
     "\n",
     "\n",
     "```{figure} Images/Schematic_Load_Bearing_Floor_Plan_Cantilever_Beam.jpg\n",
+    "---\n",
+    "width: 500px\n",
+    "---\n",
     "```\n",
     "\n",
     "```{note}\n",
@@ -109,7 +121,7 @@
     "\n",
     "```{figure} Images/HEA_320.jpg\n",
     "---\n",
-    "width: 300px\n",
+    "width: 400px\n",
     "---\n",
     "```\n",
     "\n",
@@ -136,7 +148,10 @@
     "**Load Combination 1: Extreme Load on Beam Section A-B**\n",
     "In this load combination, the section between the supports is loaded with a variable load of 24 kN/m. The permanent load of 40.2 kN/m is present on the entire beam.\n",
     "\n",
-    "```{figure} Images/Momentline_Cantilever_Beam.jpg\n",
+    "```{figure} Images/Cantilever_Beam_Loads_Momentline.jpg\n",
+    "---\n",
+    "width: 400px\n",
+    "---\n",
     "```\n",
     "\n",
     "To calculate the maximum occurring stress, we need to use the partial factors for the load. We look for the largest moment that can occur. In this case, it is the field moment at C. Load on the cantilever reduces the field moment. This load therefore has a favorable effect and should be taken as small as possible.\n",
@@ -193,6 +208,9 @@
     "```\n",
     "\n",
     "```{figure} Images/Cantilever_Beam_Loads_Deformationline.jpg\n",
+    "---\n",
+    "width: 400px\n",
+    "---\n",
     "```\n",
     "\n",
     "**Load Combination 2: Extreme Load on Cantilever B–D.**\n",
@@ -201,7 +219,7 @@
     "\n",
     "The support moment at B is solely determined by the load on the cantilever, not the load on beam section A-B. The maximum moment occurs when the cantilever is extremely loaded, by both the permanent and variable loads. Here too, we can determine the partial factors, where those for beam section A-B are not applicable.\n",
     "\n",
-    "```{figure} Images/Cantilever_Beam_Loads2.jpg\n",
+    "```{figure} Images/Cantilever_Beam_Momentline2.jpg\n",
     "```\n",
     "\n",
     "Partial factors for Ultimate Limit State of Cantilevered Beam (Safety Class 2)\n",
@@ -230,7 +248,10 @@
     "\n",
     "To calculate the deflection at D, we need to divide the beam into two parts: a clamped beam B-D with the variable load, and a beam on two supports A-B with a moment K at support B, caused by the load on the cantilever beam B-D.\n",
     "\n",
-    "```{figure} Images/Cantilever_Beam_Deformationline2.jpg\n",
+    "```{figure} Images/Cantilever_Beam_Loads_Deformationline2.jpg\n",
+    "---\n",
+    "width: 400px\n",
+    "---\n",
     "```\n",
     "\n",
     "```{note} Steel\n",
@@ -260,7 +281,7 @@
     "\n",
     "With this, we can perform a U.C.:\n",
     "\n",
-    "$U.C. \\rightarrow \\dfrac{w_{bij, uit}}{w_{bij, norm, uit}}   = \\dfrac{5 [mm]}{8 [mm]}  =0,6 \\leq 1,0$ \\Rightarrow \\textcolor{green}{Satisfied}.\n",
+    "$U.C. \\rightarrow \\dfrac{w_{bij, uit}}{w_{bij, norm, uit}}   = \\dfrac{5 [mm]}{8 [mm]}  =0,6 \\leq 1,0 \\ \\Rightarrow \\textcolor{green}{Satisfied}$\n",
     "```\n",
     "\n",
     "**Evaluation of Verification Calculations:**\n",
